src/pages/common/components/AIBanner/AIBanner.less
@import (reference) '~@gorgias/design-tokens/dist/css/layout';
@import (reference) '~css/typography.less';

:local {
    .container {
        padding: 12px;
        display: flex;
        gap: @layout-spacing-xs;
        border: 1px solid var(--accessory-magenta-3);
        border-radius: @layout-spacing-xxs;
        background-color: var(--neutral-grey-0);

        .icon {
            font-size: 20px !important;
            color: var(--accessory-magenta-3);
            align-self: center;
        }

        &.hasError {
            border: 1px solid var(--feedback-error);

            .icon {
                color: var(--feedback-error);
            }
        }

        &.fill {
            padding: @layout-spacing-s;
            border-color: transparent;
            border-radius: @layout-spacing-xs;

            &.hasError {
                background-color: var(--accessory-red-1);
            }

            &:not(.hasError) {
                background-color: var(--accessory-magenta-1);
                color: var(--neutral-grey-6);
                border-color: var(--accessory-magenta-2);

                .icon {
                    color: var(--accessory-magenta-25);
                }
            }
        }

        &.success {
            background-color: #f4fdfa;
            color: var(--neutral-grey-6);
            border: none;

            .icon {
                color: var(--feedback-success);
            }
        }
    }
    .content {
        flex: 1;
        display: flex;
        flex-direction: column;
        gap: @layout-spacing-xs;

        :global {
            .message-content {
                background: var(--neutral-grey-0) !important;
            }
        }
    }
}

